Fix spacing issue.

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -177,6 +177,7 @@ blockquote, .micro-excerpt > :not(img) {
 
 .article-excerpt > %headings, .micro-excerpt > %headings {
   margin: 0 auto; 
+  padding-bottom: 0;
 }
 
 .article-excerpt {
